# Cougr

examples/ai_dungeon_master_arena/: Cargo.toml  README.md
examples/ai_dungeon_master_arena/src/: lib.rs  test.rs
examples/angry_birds/: Cargo.toml  README.md
examples/angry_birds/src/: lib.rs  test.rs
examples/arkanoid/: Cargo.toml  README.md
examples/arkanoid/src/: test.rs
examples/asteroids/: Cargo.toml  README.md
examples/asteroids/src/: lib.rs  test.rs
examples/battleship/: .gitignore  Cargo.toml  README.md
examples/battleship/.github/workflows/: battleship.yml
examples/battleship/src/: lib.rs  test.rs
examples/bomberman/: Cargo.toml
examples/connect_four/: Cargo.toml
examples/cross_asset_racing_league/: README.md
examples/cross_asset_racing_league/src/: components.rs  helpers.rs  lib.rs  systems.rs  test.rs  types.rs
examples/flappy_bird/: Cargo.toml
examples/geometry_dash/: Cargo.toml
examples/murdoku/: Cargo.toml  README.md
examples/murdoku/frontend/: package-lock.json  package.json
examples/murdoku/frontend/src/: App.tsx  lucide-react.d.ts  types.ts
examples/murdoku/frontend/src/components/: ErrorBanner.tsx  MoveCounter.tsx  PuzzleCard.tsx  PuzzleGrid.tsx
examples/murdoku/frontend/src/hooks/: useMurdoku.ts
examples/murdoku/frontend/src/pages/: HomePage.tsx  PlayPage.tsx
examples/murdoku/src/: auth.rs  components.rs  lib.rs  types.rs  zk.rs
examples/pac_man/: README.md
examples/pac_man/src/: components.rs  lib.rs  maze.rs  systems.rs  test.rs  types.rs
examples/pong/: Cargo.toml
examples/proof_of_hunt/: Cargo.toml
examples/rock_paper_scissors/: Cargo.toml
examples/shadow_draft_card_game/: Cargo.toml
examples/sudoku/: Cargo.toml
examples/tap_battle/: Cargo.toml
examples/tower_defense/: Cargo.toml
examples/trading_card_game/: Cargo.toml
examples/treasure_hunt/: Cargo.toml
