[package]
name = "bomberman"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = "25.1.0"
num-derive = "0.4"
cougr-core = "1.0.0"

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
overflow-checks = true

[features]
testutils = ["soroban-sdk/testutils"]
